Fix jumping nav, remove dropcap.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -23,6 +23,7 @@
   -o-font-feature-settings: "kern" 1;
   font-feature-settings: "kern" 1;
   font-kerning: normal;
+  overflow-y:scroll;
 }
 
 
@@ -45,9 +46,6 @@
  img {
   max-width: 100%;
   vertical-align: middle;
-  -webkit-box-shadow: 0px 1px 5px -1px rgba(0,0,0,0.9);
-  -moz-box-shadow: 0px 1px 5px -1px rgba(0,0,0, 0.9);
-  box-shadow: 0px 1px 5px -1px rgba(0,0,0,0.9);
 }
 
 
